--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
         <title>tela login</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="../css/style.css" media="all">
-        <link rel="stylesheet" href="../css/mdq.css">
+        <link rel="stylesheet" href="css/style.css" media="all">
+        <link rel="stylesheet" href="css/mdq.css">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
         <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
@@ -20,7 +20,7 @@
         <main>
             <section class="login">
                 <div class="image">
-                    <img src="../imagens/pexels-bruno-thethe-640.jpg" alt="">
+                    <img src="imagens/pexels-bruno-thethe-640.jpg" alt="">
                 </div>
                 <div class="form">
                     <h1>Login</h1>
