terminado versão de tablet e desktop

--- a/index.html
+++ b/index.html
@@ -20,7 +20,11 @@
         <main>
             <section class="login">
                 <div class="image">
-                    <img src="imagens/pexels-bruno-thethe-640.jpg" alt="">
+                    <picture>
+                        <source media="(min-width:992px)" srcset="imagens/pexels-christian-santiago-2933567.jpg">
+                        <source media="(min-width:768px) and (max-width:992px)" srcset="imagens/pexels-david-underland-3149948.jpg">
+                        <img src="imagens/pexels-bruno-thethe-640.jpg" alt="Prédio">
+                    </picture>
                 </div>
                 <div class="form">
                     <h1>Login</h1>
